--- a/css/dark.css
+++ b/css/dark.css
@@ -24,7 +24,7 @@
     animation-name: placeholderWave;
     -webkit-animation-timing-function: linear;
     animation-timing-function: linear;
-    background: linear-gradient(90deg,#28282800 20%,var(--dark-back-color) 50%,#28282800 80%);
+    background: linear-gradient(90deg,#28282800 20%,var(--dark-back-color) 50%,#28282800 80%) !important;
     background-size: 650px;
     height: 100%;
     position: absolute;
@@ -878,4 +878,68 @@ ul[data-testid="achievements_list_template"] {
 }
 .AchievementsListTemplate-module__listItem--1YSJc+* {
     border-color: var(--dark-light-color);
+}
+
+/* ------------------------------------------------------ */
+/*                  Page profil (new UX)                  */
+/* ------------------------------------------------------ */
+
+/* Bannière du profil */
+.Wallpaper__wallpaper--ffCjw {
+    background: var(--dark-light-color) !important;
+}
+
+/* Texte dans les boutons */
+a[aria-current="page"] h2 {
+    color: var(--blue-nds) !important;
+}
+
+/* Divider entre les stats personnelles */
+div.brn-qpage-next-answer-box-user-info__stats-list-item::after {
+    border: 1px solid var(--dark-light-color) !important;
+}
+
+/* Badge de rang */
+div.sg-label--yellow-20 h2 {
+    color: var(--yellow-nds) !important;
+}
+
+/* Boutons bleu clair */
+.sg-button--solid-light {
+    background-color: var(--blue-nds);
+}
+
+/* Icons dans les boutons */
+.sg-button__icon use {
+    fill: white;
+}
+
+/* (B) Nombre de points */
+svg[aria-labelledby="title-points-k8ih9g"] use {
+    fill: white;
+}
+.sg-counter__icon-container::before {
+    background-color: inherit;
+}
+
+/* Liste d'amis */
+div[data-testid="profile_page_friends"] {
+    background: none;
+    border: 2px solid var(--dark-light-color);
+}
+
+/* Label "Meilleure réponse" */
+div.sg-label--yellow-20 use {
+    fill: var(--yellow-nds);
+}
+
+/* Label "Vérifiée par des experts" */
+.sg-label--green-20 {
+    background-color: #2b3e35;
+}
+.sg-label--green-20 .sg-label__text {
+    color: var(--green-nds) !important;
+}
+.sg-label--green-20 use {
+    fill: var(--green-nds);
 }
