--- a/css/clean.css
+++ b/css/clean.css
@@ -4,6 +4,7 @@
     --green-nds : #53CF92;
     --yellow-nds : #ffc400;
     --blue-hover-nds: #1091e7;
+    --green-btn-nds: #62c462;
 }
 
 /* Interface du haut */
@@ -848,7 +849,7 @@ input:checked + .switch:before {
     display: inline-flex;
     position: fixed;
     right: 0;
-    z-index: 100;
+    z-index: 9999;
     top: 12rem;
     height: 32px;
     padding: 0 16px;
