--- a/clean.css
+++ b/clean.css
@@ -698,10 +698,9 @@ textarea.text-reason {
 
 
 /* Pop up Notifications & Friends */
-
-.NestedUserPanelBubble__panel--x3Jaa {
-    width: 28vw !important;
-    height: 85vh !important;
+.NestedUserPanelBubble-module__panel--fHYof {
+    height: 70vh !important;
+    width: 60vh !important;
 }
 
 /* Plus de question à propos de X */
@@ -820,10 +819,20 @@ input.onlylink {
 /* -------------------------------------------------------- */
 /* -------------------------------------------------------- */
 /* -------------------------------------------------------- */
-/* Mise à jour après les changements de Brainly */
+/* Ajout des liens dans l'historique de modération */
+a.nds-historique-links {
+    color: transparent;
+    padding-right: 1em;
+    margin-right: .1em;
+    border-radius: 10px;
+    background-image: url('https://raw.githubusercontent.com/sugiiiiii/nds-moderaton-ui-ext/main/images/host/arrow-up-right.svg');
+    background-position: center;
+}
+a.nds-historique-links:hover {
+    background-color: rgb(0 116 255 / 15%);
+}
 
-/* Fenêtre des notifs + amis */
-.NestedUserPanelBubble-module__panel--fHYof {
-    height: 70vh !important;
-    width: 60vh !important;
+/* Cacher bannière "Pose ta question" */
+.js-react-below-answers.empty\:sg-space-y-m.md\:empty\:sg-space-y-l {
+    display: none;
 }
